Revert "fix(scrollbar): correct scrollbar display property in globals.css"
This reverts commit 40c37a0b88e71e964147b282036d79d877f734f8.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -184,11 +184,7 @@
   -ms-overflow-style: none;
   scrollbar-width: none;
 
-  &::-webkit-scrollbar,
-  {
-    display: none;
-  }
-  ::-webkit-scrollbar {
+  &::-webkit-scrollbar {
     display: none;
   }
 }
